added elasticsearch docker